--- a/.github/workflows/dailysender.yml
+++ b/.github/workflows/dailysender.yml
@@ -5,11 +5,15 @@ on:
         - cron: '5 9 * * *'
     workflow_dispatch:
 
+permissions:
+  contents: read
+  packages: write
+
 jobs:
     build:
         runs-on: ubuntu-latest
         steps:
-            - uses: action/checkout@v2
+            - uses: actions/checkout@v3
             - uses: actions/setup-python@v2
               with:
                 python-version: 3.x
