--- a/.github/workflows/dailysender.yml
+++ b/.github/workflows/dailysender.yml
@@ -1,26 +1,26 @@
 name: Send Daily Email
 
 on:
-    schedule:
-        - cron: '5 9 * * *'
-    workflow_dispatch:
-
-permissions:
-  contents: read
-  packages: write
+  schedule:
+    - cron: '0 9 * * *'  # Run every day at 9 AM
 
 jobs:
-    build:
-        runs-on: ubuntu-latest
-        steps:
-            - uses: actions/checkout@v3
-            - uses: actions/setup-python@v2
-              with:
-                python-version: 3.x
-            - name: Run email code
-              env:
-                USER_EMAIL: ${{ secrets.USER_EMAIL }}
-                USER_PASSWORD: ${{ secrets.USER_PASSWORD }}
-              run: python main.py
+  send-email:
+    runs-on: ubuntu-latest
 
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v3
 
+    - name: Set up Python
+      uses: actions/setup-python@v3
+      with:
+        python-version: 3.x
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+
+    - name: Run script
+      run: python main.py
