--- a/.github/workflows/dailysender.yml
+++ b/.github/workflows/dailysender.yml
@@ -3,6 +3,7 @@ name: Send Daily Email
 on:
   schedule:
     - cron: '0 9 * * *'  # Run every day at 9 AM
+  workflow_dispatch:
 
 jobs:
   send-email:
